# wegui-argb

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  WEGUI_API_REFERENCE.md  WeGui_Simulator.code-workspace  we_hw_port.h  we_user_config.h
Core/: dirty_driver.c  image_res.c  image_res.h  we_font_runtime_types.h  we_font_text.c  we_font_text.h  we_gui_config.h  we_gui_driver.c  we_gui_driver.h  we_motion.c  we_motion.h  we_render.h
Core/widgets/arc/: we_widget_arc.c  we_widget_arc.h  widget.md
Core/widgets/btn/: we_widget_btn.c  we_widget_btn.h  widget.md
Core/widgets/chart/: we_widget_chart.c  we_widget_chart.h  widget.md
Core/widgets/checkbox/: we_widget_checkbox.c  we_widget_checkbox.h  widget.md
Core/widgets/font_flash/: widget.md  (+2 more)
Demo/: demo_arc.c  demo_btn.c  demo_chart.c  demo_checkbox.c  demo_common.c  demo_common.h  demo_concentric_arc.c  demo_flash_font.c  demo_flash_img.c  demo_group.c  demo_img.c  demo_img_ex.c  demo_key.c  demo_label.c  demo_label_ex.c  demo_msgbox.c  demo_progress.c  demo_scroll_panel.c  demo_slider.c  demo_slideshow.c  demo_toggle.c  simple_widget_demos.h  we_input_port_template.c  we_input_port_template.h  we_lcd_port_template.c  we_lcd_port_template.h  we_storage_port_template.c  we_storage_port_template.h  we_user_config.h_template(接口配置, 请更名.h后拷贝到平台调用)
STM32F030/: main.c  main.h  stm32f030_we_input_port.h  stm32f0xx_it.c  stm32f0xx_it.h  system_stm32f0xx.c
STM32F030/Lcd_Port/: gc9a01.c  gc9a01.h  st7735.c  st7735.h  st7789s.c  st7789v3.c  st7789v3.h  st7789vw.c  st7789vw.h  st7796s.c  st7796s.h  stm32f030_hw_config.h  stm32f030_lcd_dma_4spi_port.c  stm32f030_lcd_dma_4spi_port.h  stm32f030_lcd_hard_4spi_port.c  stm32f030_lcd_hard_4spi_port.h  stm32f030_lcd_soft_4spi_port.c  stm32f030_lcd_soft_4spi_port.h
STM32F030/MDK-ARM/: Project.uvprojx
STM32F103/: main.c  main.h  stm32f103_we_input_port.h  stm32f10x_it.c  stm32f10x_it.h
STM32F103/Lcd_Port/: gc9a01.c  gc9a01.h  st7735.c  st7735.h  st7789s.c  st7789s.h  st7789v3.c  st7789vw.c  st7789vw.h  st7796s.c  st7796s.h  stm32f103_flash_dma_stdspi_port.c  stm32f103_flash_dma_stdspi_port.h  stm32f103_flash_hard_stdspi_port.c  stm32f103_flash_hard_stdspi_port.h  stm32f103_hw_config.h  stm32f103_lcd_dma_4spi_port.c  stm32f103_lcd_dma_4spi_port.h  stm32f103_lcd_hard_4spi_port.c  stm32f103_lcd_hard_4spi_port.h  stm32f103_lcd_soft_4spi_port.c  stm32f103_lcd_soft_4spi_port.h  w25qxx.c  w25qxx.h  we_port.h
STM32F103/MDK-ARM/: Project.uvprojx
Simulator/: CMakeLists.txt  build_sim.ps1  main_sim.c  run_latest_sim.ps1  sdl_port.c  sdl_port.h  we_port.h  we_sim_port_config.h
Simulator/build_fixed/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
Simulator/build_ninja/: CMakeCache.txt
tool/STM32F103_ex_flash_download/: flash_download.uvprojx
tool/bin2c/: README.md  README_CN.md
tool/font2c/: README.md  README_CN.md
(+166 files in other folders)
